--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ body {
     #title {
         font-size: 4vw;
     }
+
+    #HowBitcoin {
+        width: 100%;
+        padding: 5% !important;
+    
+    }
 }
 
 #navbar {
@@ -90,4 +96,54 @@ body {
 
 .content h1 {
     text-align: center;
+}
+
+.content p {
+    font-size: 1.5em;
+}
+
+#headH1 {
+    margin-top: 0px;
+    margin-bottom: 6%;
+    margin-right: 0px;
+    margin-left: 0px;
+    border: 1px black solid;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 5px #333333;
+    font-size: 3em;
+    width: 100%;
+    background-color: lightgray;
+}
+
+#quiz {
+    border: solid  1px black;
+    border-radius: 20px;
+    margin: 3%;
+    margin-top: 0px;
+    padding: 40px;
+    padding-top: 0px;
+    padding-bottom: 10px;
+    background-color: lightgray;
+}
+
+#quiz h3 {
+    text-align: center;
+}
+
+#submitB {
+    padding: 2% 3%;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width: 100%;
+    background-color: #333333;
+    color: white;
+    border-radius: 10px;
+    transition: 0.2s linear;
+}
+
+#submitB:hover {
+    background-color: #666666;
+    transition: 0.2s linear;
 }
