--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ body {
     text-align: center;
 }
 
+.content h2 { 
+    text-align: center;
+}
+
+.content h3 {
+    text-align: center;
+}
+
 .content p {
     font-size: 1.5em;
 }
@@ -121,6 +129,7 @@ body {
     border-radius: 20px;
     margin: 3%;
     margin-top: 0px;
+    margin-bottom: 40px;
     padding: 40px;
     padding-top: 0px;
     padding-bottom: 10px;
@@ -146,4 +155,11 @@ body {
 #submitB:hover {
     background-color: #666666;
     transition: 0.2s linear;
+}
+
+input[type=radio] {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin: 5px;
 }
